// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage renders 1`] = `
<DocumentFragment>
  <div
    class="flex-1 flex flex-col relative min-h-full"
  >
    <header
      class="mb-2 shadow shadow-md"
    >
      <div
        class="main-container main-container--content pr-0"
      >
        <a
          class="px-4 lg:px-0 font-2xl font-serif self-center text-left focus:outline-none focus:ring-2 focus:ring-red-600"
          href="/"
        >
          [Translation for https://example.com/global/translations.ttl#appName does not exist]
        </a>
      </div>
      <div
        class="bg-gray-100 dark:bg-gray-900"
      >
        <div
          class="main-container main-container--content flex flex-row px-0"
        >
          <button
            class="p-2 px-4 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-red-600"
            data-testid="page-header-left-menu-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <div
            class="flex-1 text-lg font-semibold font-serif leading-10"
          >
            [Translation for https://example.com/global/translations.ttl#loginPageTitle does not exist]
          </div>
          <button
            class="p-2 px-4 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-red-600"
            data-testid="page-header-right-menu-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <div
      class="main-container main-container--full"
    >
      <div
        class="layout__sidebar layout__sidebar--left layout__sidebar--full"
        data-testid="layout-sub-menu"
      >
        <button
          class="button button--close layout__close-button layout__close-button--left  layout__close-button--full text-right"
          data-testid="sub-menu-nav-close-button"
          type="button"
        >
          <svg
            class="icon"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
           [Translation for https://example.com/global/translations.ttl#close does not exist]
        </button>
        <nav
          class="pages-nav pages-nav--sub-menu"
        >
          <ul
            class="nav-pages__list nav-pages__list--sub-menu"
          >
            <li>
              <a
                class="pages-nav__link"
                data-testid="nav-item-link"
                href="/characters"
              >
                [Translation for https://example.com/global/translations.ttl#charactersPageTitle does not exist]
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                data-testid="nav-item-link"
                href="/rules"
              >
                [Translation for https://example.com/global/translations.ttl#rulesPageTitle does not exist]
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                data-testid="nav-item-link"
                href="/faq"
              >
                [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                data-testid="nav-item-link"
                href="/about"
              >
                [Translation for https://example.com/global/translations.ttl#aboutPageTitle does not exist]
              </a>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="layout__main layout__main--full"
      >
        <main
          class="flex-1"
        >
          <div
            class="main-container px-4 lg:px-0 md:grid grid-cols-2 gap-4 max-w-3xl place-items-center"
          >
            <div>
              <div
                class="content leading-normal max-w-prose mx-auto"
                style="hyphens: auto;"
              >
                <h1>
                  [Translation for https://example.com/global/translations.ttl#loginPageTitle does not exist]
                </h1>
                <p>
                  [Translation for https://example.com/global/translations.ttl#authenticationPitch does not exist]
                </p>
              </div>
              <p
                class="font-bold mt-6"
              >
                [Translation for https://example.com/global/translations.ttl#authenticationGuidance does not exist]
              </p>
              <ul
                class="flex flex-col space-y-2 my-2"
              >
                <li>
                  <button
                    class="button button--solid w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    Inrupt Pod Spaces
                  </button>
                </li>
                <li>
                  <button
                    class="button button--solid w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    solidcommunity.net
                  </button>
                </li>
                <li>
                  <button
                    class="button button--solid w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    inrupt.net
                  </button>
                </li>
              </ul>
            </div>
            <form
              class="mt-2 md:mt-0 text-left border p-2 rounded"
            >
              <img
                alt="[Translation for https://example.com/global/translations.ttl#loginImage does not exist]"
                class="mx-auto hidden md:block"
                src="/logos/solid-emblem.svg"
                style="max-width: 200px;"
              />
              <label
                class="label"
                for="idp"
              >
                [Translation for https://example.com/global/translations.ttl#solidIdP does not exist]
                <input
                  class="input"
                  data-testid="login-form-idp-field"
                  id="idp"
                  placeholder="https://"
                  required=""
                  type="url"
                  value=""
                />
              </label>
              <label
                class="label"
                for="rememberIdp"
              >
                <input
                  class="checkbox"
                  data-testid="login-form-remember-checkbox"
                  id="rememberIdp"
                  type="checkbox"
                />
                <span
                  class="label__text"
                >
                  [Translation for https://example.com/global/translations.ttl#rememberIdP does not exist]
                </span>
              </label>
              <button
                class="button w-full"
                data-testid="login-form-button"
                type="submit"
              >
                [Translation for https://example.com/global/translations.ttl#login does not exist]
              </button>
              <div
                class="mt-4"
              >
                <a
                  class="link"
                  href="/signup"
                >
                  [Translation for https://example.com/global/translations.ttl#signupSolidPrompt does not exist]
                </a>
              </div>
            </form>
          </div>
          <aside
            class="main-container main-container--content my-16"
          >
            <div
              class="content leading-normal max-w-prose mx-auto content content--small"
              style="hyphens: auto;"
            >
              <h2
                data-testid="faq-label"
                id="faqLabel"
              >
                [Translation for https://example.com/#faqLabel does not exist]
              </h2>
              <div
                data-testid="faq-description"
              >
                <p>
                  [Translation for https://example.com/#faqDescription does not exist]
                </p>
              </div>
            </div>
            <div
              class="content leading-normal max-w-prose mx-auto content content--small"
              style="hyphens: auto;"
            >
              <h2
                data-testid="faq-label"
                id="faqLabel"
              >
                [Translation for https://example.com/#faqLabel does not exist]
              </h2>
              <div
                data-testid="faq-description"
              >
                <p>
                  [Translation for https://example.com/#faqDescription does not exist]
                </p>
              </div>
            </div>
            <div
              class="content leading-normal max-w-prose mx-auto content content--small"
              style="hyphens: auto;"
            >
              <h2
                data-testid="faq-label"
                id="faqLabel"
              >
                [Translation for https://example.com/#faqLabel does not exist]
              </h2>
              <div
                data-testid="faq-description"
              >
                <p>
                  [Translation for https://example.com/#faqDescription does not exist]
                </p>
              </div>
            </div>
          </aside>
        </main>
        <footer
          class="main-container main-container--content mt-8 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
        >
          <div
            class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
          >
            <a
              class="link"
              href="/about"
            >
              [Translation for https://example.com/global/translations.ttl#aboutPageTitle does not exist]
            </a>
            <a
              class="link"
              href="/faq"
            >
              [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
            </a>
          </div>
          <div
            class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
          >
            <button
              class="button"
              data-testid="dark-mode-selector-button"
              type="button"
            >
              <span>
                🌙 [Translation for https://example.com/global/translations.ttl#darkModeTurnOn does not exist]
              </span>
            </button>
          </div>
        </footer>
      </div>
      <div
        class="layout__sidebar layout__sidebar--right-fake layout__sidebar--full"
      />
      <div
        class="layout__sidebar layout__sidebar--right layout__sidebar--full"
      >
        <div>
          <button
            class="button button--close layout__close-button layout__close-button--right  layout__close-button--full text-left"
            data-testid="session-close-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             [Translation for https://example.com/global/translations.ttl#close does not exist]
          </button>
          <div
            class="px-2"
          >
            <div
              class="text-center"
            >
              <h2
                class="font-bold text-xl"
              >
                [Translation for https://example.com/global/translations.ttl#recommendedIdPSet does not exist]
              </h2>
              <ul
                class="flex flex-col space-y-2 my-2"
              >
                <li>
                  <button
                    class="button button--solid w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    Inrupt Pod Spaces
                  </button>
                </li>
                <li>
                  <button
                    class="button button--solid w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    solidcommunity.net
                  </button>
                </li>
                <li>
                  <button
                    class="button button--solid w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    inrupt.net
                  </button>
                </li>
              </ul>
              <h2
                class="line-behind font-bold text-xl"
              >
                <span
                  class="line-behind__line"
                />
                <span
                  class="bg-white dark:bg-gray-800 lg:bg-white lg:dark:bg-gray-800"
                >
                  [Translation for https://example.com/global/translations.ttl#or does not exist]
                </span>
              </h2>
              <form
                class="mt-2 md:mt-0 text-left"
              >
                <img
                  alt="[Translation for https://example.com/global/translations.ttl#loginImage does not exist]"
                  class="mx-auto hidden md:block"
                  src="/logos/solid-emblem.svg"
                  style="max-width: 200px;"
                />
                <label
                  class="label"
                  for="idp"
                >
                  [Translation for https://example.com/global/translations.ttl#solidIdP does not exist]
                  <input
                    class="input"
                    data-testid="login-form-idp-field"
                    id="idp"
                    placeholder="https://"
                    required=""
                    type="url"
                    value=""
                  />
                </label>
                <label
                  class="label"
                  for="rememberIdp"
                >
                  <input
                    class="checkbox"
                    data-testid="login-form-remember-checkbox"
                    id="rememberIdp"
                    type="checkbox"
                  />
                  <span
                    class="label__text"
                  >
                    [Translation for https://example.com/global/translations.ttl#rememberIdP does not exist]
                  </span>
                </label>
                <button
                  class="button w-full"
                  data-testid="login-form-button"
                  type="submit"
                >
                  [Translation for https://example.com/global/translations.ttl#login does not exist]
                </button>
                <div
                  class="mt-4"
                >
                  <a
                    class="link"
                    href="/signup"
                  >
                    [Translation for https://example.com/global/translations.ttl#signupSolidPrompt does not exist]
                  </a>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoginPage renders a warning when authenticated 1`] = `
<DocumentFragment>
  <div
    class="flex-1 flex flex-col relative min-h-full"
  >
    <header
      class="mb-2 shadow shadow-md"
    >
      <div
        class="main-container main-container--content pr-0"
      >
        <a
          class="px-4 lg:px-0 font-2xl font-serif self-center text-left focus:outline-none focus:ring-2 focus:ring-red-600"
          href="/"
        >
          [Translation for https://example.com/global/translations.ttl#appName does not exist]
        </a>
      </div>
      <div
        class="bg-gray-100 dark:bg-gray-900"
      >
        <div
          class="main-container main-container--content flex flex-row px-0"
        >
          <button
            class="p-2 px-4 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-red-600"
            data-testid="page-header-left-menu-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6h16M4 12h16M4 18h16"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <div
            class="flex-1 text-lg font-semibold font-serif leading-10"
          >
            [Translation for https://example.com/global/translations.ttl#loginPageTitle does not exist]
          </div>
          <button
            class="p-2 px-4 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-red-600"
            data-testid="page-header-right-menu-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <div
      class="main-container main-container--full"
    >
      <div
        class="layout__sidebar layout__sidebar--left layout__sidebar--full"
        data-testid="layout-sub-menu"
      >
        <button
          class="button button--close layout__close-button layout__close-button--left  layout__close-button--full text-right"
          data-testid="sub-menu-nav-close-button"
          type="button"
        >
          <svg
            class="icon"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
           [Translation for https://example.com/global/translations.ttl#close does not exist]
        </button>
        <nav
          class="pages-nav pages-nav--sub-menu"
        >
          <ul
            class="nav-pages__list nav-pages__list--sub-menu"
          >
            <li>
              <a
                class="pages-nav__link"
                data-testid="nav-item-link"
                href="/characters"
              >
                [Translation for https://example.com/global/translations.ttl#charactersPageTitle does not exist]
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                data-testid="nav-item-link"
                href="/rules"
              >
                [Translation for https://example.com/global/translations.ttl#rulesPageTitle does not exist]
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                data-testid="nav-item-link"
                href="/faq"
              >
                [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
              </a>
            </li>
            <li>
              <a
                class="pages-nav__link"
                data-testid="nav-item-link"
                href="/about"
              >
                [Translation for https://example.com/global/translations.ttl#aboutPageTitle does not exist]
              </a>
            </li>
          </ul>
        </nav>
      </div>
      <div
        class="layout__main layout__main--full"
      >
        <main
          class="flex-1"
        >
          <div
            class="main-container main-container--content"
            data-testid="logged-in-already-warning"
          >
            <div
              class="bg-yellow-200 text-yellow-900 border-yellow-400 border px-2 py-1 rounded-sm mb-2"
            >
              [Translation for https://example.com/global/translations.ttl#LoggedInAlready does not exist]
            </div>
          </div>
          <div
            class="main-container px-4 lg:px-0 md:grid grid-cols-2 gap-4 max-w-3xl place-items-center"
          >
            <div>
              <div
                class="content leading-normal max-w-prose mx-auto"
                style="hyphens: auto;"
              >
                <h1>
                  [Translation for https://example.com/global/translations.ttl#loginPageTitle does not exist]
                </h1>
                <p>
                  [Translation for https://example.com/global/translations.ttl#authenticationPitch does not exist]
                </p>
              </div>
              <p
                class="font-bold mt-6"
              >
                [Translation for https://example.com/global/translations.ttl#authenticationGuidance does not exist]
              </p>
              <ul
                class="flex flex-col space-y-2 my-2"
              >
                <li>
                  <button
                    class="button button--solid w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    Inrupt Pod Spaces
                  </button>
                </li>
                <li>
                  <button
                    class="button button--solid w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    solidcommunity.net
                  </button>
                </li>
                <li>
                  <button
                    class="button button--solid w-full"
                    data-testid="login-button"
                    type="button"
                  >
                    inrupt.net
                  </button>
                </li>
              </ul>
            </div>
            <form
              class="mt-2 md:mt-0 text-left border p-2 rounded"
            >
              <img
                alt="[Translation for https://example.com/global/translations.ttl#loginImage does not exist]"
                class="mx-auto hidden md:block"
                src="/logos/solid-emblem.svg"
                style="max-width: 200px;"
              />
              <label
                class="label"
                for="idp"
              >
                [Translation for https://example.com/global/translations.ttl#solidIdP does not exist]
                <input
                  class="input"
                  data-testid="login-form-idp-field"
                  id="idp"
                  placeholder="https://"
                  required=""
                  type="url"
                  value=""
                />
              </label>
              <label
                class="label"
                for="rememberIdp"
              >
                <input
                  class="checkbox"
                  data-testid="login-form-remember-checkbox"
                  id="rememberIdp"
                  type="checkbox"
                />
                <span
                  class="label__text"
                >
                  [Translation for https://example.com/global/translations.ttl#rememberIdP does not exist]
                </span>
              </label>
              <button
                class="button w-full"
                data-testid="login-form-button"
                type="submit"
              >
                [Translation for https://example.com/global/translations.ttl#login does not exist]
              </button>
              <div
                class="mt-4"
              >
                <a
                  class="link"
                  href="/signup"
                >
                  [Translation for https://example.com/global/translations.ttl#signupSolidPrompt does not exist]
                </a>
              </div>
            </form>
          </div>
          <aside
            class="main-container main-container--content my-16"
          >
            <div
              class="content leading-normal max-w-prose mx-auto content content--small"
              style="hyphens: auto;"
            >
              <h2
                data-testid="faq-label"
                id="faqLabel"
              >
                [Translation for https://example.com/#faqLabel does not exist]
              </h2>
              <div
                data-testid="faq-description"
              >
                <p>
                  [Translation for https://example.com/#faqDescription does not exist]
                </p>
              </div>
            </div>
            <div
              class="content leading-normal max-w-prose mx-auto content content--small"
              style="hyphens: auto;"
            >
              <h2
                data-testid="faq-label"
                id="faqLabel"
              >
                [Translation for https://example.com/#faqLabel does not exist]
              </h2>
              <div
                data-testid="faq-description"
              >
                <p>
                  [Translation for https://example.com/#faqDescription does not exist]
                </p>
              </div>
            </div>
            <div
              class="content leading-normal max-w-prose mx-auto content content--small"
              style="hyphens: auto;"
            >
              <h2
                data-testid="faq-label"
                id="faqLabel"
              >
                [Translation for https://example.com/#faqLabel does not exist]
              </h2>
              <div
                data-testid="faq-description"
              >
                <p>
                  [Translation for https://example.com/#faqDescription does not exist]
                </p>
              </div>
            </div>
          </aside>
        </main>
        <footer
          class="main-container main-container--content mt-8 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
        >
          <div
            class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
          >
            <a
              class="link"
              href="/about"
            >
              [Translation for https://example.com/global/translations.ttl#aboutPageTitle does not exist]
            </a>
            <a
              class="link"
              href="/faq"
            >
              [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
            </a>
          </div>
          <div
            class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
          >
            <button
              class="button"
              data-testid="dark-mode-selector-button"
              type="button"
            >
              <span>
                🌙 [Translation for https://example.com/global/translations.ttl#darkModeTurnOn does not exist]
              </span>
            </button>
          </div>
        </footer>
      </div>
      <div
        class="layout__sidebar layout__sidebar--right-fake layout__sidebar--full"
      />
      <div
        class="layout__sidebar layout__sidebar--right layout__sidebar--full"
      >
        <div>
          <button
            class="button button--close layout__close-button layout__close-button--right  layout__close-button--full text-left"
            data-testid="session-close-button"
            type="button"
          >
            <svg
              class="icon"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             [Translation for https://example.com/global/translations.ttl#close does not exist]
          </button>
          <div
            class="px-2"
          >
            <p>
              [Translation for https://example.com/global/translations.ttl#loggedIn does not exist]
            </p>
            <button
              class="button w-full"
              data-testid="authenticated-logout-button"
              type="button"
            >
              [Translation for https://example.com/global/translations.ttl#logOut does not exist]
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
